--- a/presentation/index.html
+++ b/presentation/index.html
@@ -36,9 +36,9 @@
     <div class="reveal">
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
-        <!-- With this setup three dashes separate vertical sections of slides
-             and more than three separate horizontal slides -->
-        <section data-markdown="content.md" data-separator="^----+$" data-vertical="^---$"></section>
+        <!-- With this setup three single quotes separate vertical sections of
+             slides and more than three separate horizontal slides -->
+        <section data-markdown="content.md" data-separator="^''''+$" data-vertical="^'''$"></section>
       </div>
     </div>
 
